Only use drawSelection() plugin in Firefox to mitigate invisible caret bug.

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -10,6 +10,7 @@
   
   --cm-color-meta: #aaa;
   --cm-color-light-gray: rgba(0,0,0,.1);
+  --cm-selection-background: hsla(195, 80%, 40%, .16);
 }
 
 // @import 
